<resources>
    <string name="app_name">Friendly Books</string>


    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>

    <string name="create_an_account">Create an Account</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_firs_name">First Name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_conditions">I Agree To The<u> Terms And Condition</u></string>
    <string name="btn_lbl_register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>

    <string name="err_message_enter_first_name">Please enter first name.</string>
    <string name="err_message_enter_last_name">Please enter last name.</string>
    <string name="err_message_enter_email">Please enter email.</string>
    <string name="err_message_enter_password">Please enter password.</string>
    <string name="err_message_enter_confirm_password">Please confirm password.</string>
    <string name="err_message_password_and_confirm_password_mismatch">Password and Confirm Password dose not matches.</string>
    <string name="err_message_agree_terms_and_condition">Please agree terms and condition.</string>
    <string name="valid_details">Thanks for registering!</string>

    <string name="please_wait">Please Wait..</string>

    <string name="btn_lbl_submit">Submit</string>
    <string name="tv_lbl_title_FP">Forgot Password?</string>
    <string name="FP_tile_description">Enter your e-mail address, we\'ll send you an email to reset your password</string>

    <string name="check_email">Check your e-mail!</string>
    <string name="register_success">You are registered successfully!</string>

    <string name="title_complete_profile">Complete Profile</string>
    <string name="et_hint_mobile_number">Phone Number</string>
    <string name="rb_lbl_male">Male</string>
    <string name="rb_lbl_female">Female</string>
    <string name="btn_lbl_save">Save</string>
    <string name="read_storage_permission_denited">Provide permission from menu permissions!</string>
    <string name="err_msg_enter_moblie_number">Plsease enter the phone number</string>
    <string name="title_activity_dash_board">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_products">Products</string>
    <string name="title_orders">Orders</string>
    <string name="action_settings">Settings</string>

    <string name="title_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_address">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>
</resources>